# SPINEUtilsCxx

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.adoc  README.md  SuperBuild.cmake  newUpload.txt
SuperBuild/: External_GDCM.cmake
appli/: CMakeLists.txt  IM-0017-0001-0001.dcm  ImageReplaceValues.cxx  ImageSeriesReadWrite.cxx  ImageSeriesReadWriteDICOM.cxx  SPINEAnonymize.cxx  SPINEAnonymizeReadIDs.cxx  SPINEAppendContours.cxx  SPINEBBImage2Nii.cxx  SPINEBoxplotsArea.cxx  SPINEContourArea.cxx  SPINEContourInfo.cxx  SPINEContourRegistration.cxx  SPINEFrequencyMapImages.cxx  SPINEImageLabelVolume.cxx  SPINENii2Init.cxx  SPINENii2StreamMnc.cxx  SPINERoiFilter.cxx  SPINEVotingImageFilter.cxx  SPINEVotingImages.cxx  SPINEWfbplot.cxx  SPINEnii2mnc.cxx  execAnonymize.sh  execImageGE2Nifti.sh  execImageSeriesReadWrite.sh  execUploadImages.sh  execXNATUpload.sh
binemcc/: execEmcc.sh
data/: NMOSpectrum.csv  contour1.xml  contour3.xml  pathsMenoPauseBatch2NotFound.txt  testBPContour.xml  testContour.xml  testContourInv.xml  testContoursBplot.xml  testContoursBplotAreaPerim.xml
lib/: CMakeLists.txt
lib/SPINEFiltersITK/: CMakeLists.txt  edgecontourfilter.txx
lib/SPINEFiltersVTK/: contourtoimagefilter.cpp  contourtoimagefilter.h
lib/SPINEToolsIO/: CMakeLists.txt  SPINEContoursReader.cxx  SPINEContoursReader.h  spinecontourswriter.cpp  spinecontourswriter.h
lib/SPINEToolsInterpolation/: CMakeLists.txt  minimizecircledistance.h  spinecirclecenter.cpp  spinecontourregistration.cxx  spinecontourregistration.h  spinecontoursinterpolation.cxx  spinecontoursinterpolation.h
lib/Wfbplot/: CMakeLists.txt  matrix.cpp  wfbplot.cpp
src/: CMakeLists.txt
src/appli/: CMakeLists.txt  GDC2AnnotationTable.cxx  ImageSeriesReadWriteDICOM.cxx  SPINEAnonymizeReadIDs.cxx  SPINEAppendContours.cxx  SPINEBBImage2Nii.cxx  SPINEContourInfo.cxx  SPINEContourRegistration.cxx  SPINEFrequencyMapImages.cxx  SPINEImageData.cxx  SPINEImageLabelOverlapMeasure.cxx  SPINENii2Init.cxx  SPINENii2Mnc.cxx  SPINENii2StreamMnc.cxx  SPINEVotingImages.cxx  SPINEWfbplot.cxx  SPINEWfbplotImages.cxx  spinewfbplotimages.cxx  test.cxx
src/cmake/: FindJSON.cmake
src/data/: IdsMenoPause.txt  IdsMenoPauseBatch2.txt  contour2.xml  pathsMenoPauseBatch2.txt  testContour.xml
src/lib/: CMakeLists.txt
src/lib/SPINEFiltersITK/: edgecontourfilter.h
src/lib/SPINEFiltersVTK/: CMakeLists.txt
src/lib/SPINEToolsIO/: CMakeLists.txt  SPINEContoursReader.cxx  SPINEContoursReader.h
src/lib/SPINEToolsInterpolation/: minimizecircledistance.cpp  spinecirclecenter.cpp  spinecirclecenter.h  spinecontoursinterpolation.cxx
src/lib/Wfbplot/: gaussweight.h  matrix.h  wfbplot.h
src/test/: testImageStencil.cxx  vtkTestFilter.cxx
test/: CMakeLists.txt  testContourInterpolation.cxx  testContourRegistration.cxx  testImageStencil.cxx  testReadSPINEContour.cxx  testSPINEWfbplot.cxx  testWfbplot.cxx
